# legac

./: .gitignore  CMakeLists.txt  lexer.cpp  main.cpp  sourcefile.cpp  test.c
include/: assembly_stub.hpp  lexer.hpp  sourcefile.hpp
